# dm-nkp-gitops-custom-mcp-server

./: .gitignore  .golangci.yml  AGENTS.md  DELIVERABLES.md  Dockerfile  Makefile  README.md  go.mod  go.sum
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd.yaml  ci.yaml  security.yaml
chart/dm-nkp-gitops-a2a-server/: Chart.yaml  values-enterprise.yaml  values.yaml
cmd/a2a-server/: main.go
cmd/server/: main.go
docs/: A2A_PROTOCOL.md  CATALOG_UPDATE_DESIGN.md  CATALOG_UPDATE_SETUP.md  CI_CD_BEST_PRACTICES.md  CI_CD_CONSISTENCY.md  CI_CD_DIFFERENCES_ANALYSIS.md  CI_CD_TEMPLATE.md  DEPLOYMENT_AND_USAGE.md  ENTERPRISE_DEPLOYMENT.md  FLUX_MCP_SETUP.md  GITHUB_CONSISTENCY_FINAL.md  GOVERNANCE.md  K8S_SECURITY_RUNBOOK.md  K8S_TROUBLESHOOTING_RUNBOOK.md  MCP_SERVER_ARCHITECTURE.md  NKP_PRODUCTION_DEPLOYMENT.md  README.md  RUNBOOK_BEST_PRACTICES.md  SECURITY.md  TESTING_GUIDE.md  WHY_THOSE_FILES_WERE_ADDED.md
docs/01-MCP/: MCP_PRIMER.md  TOOLS_REFERENCE.md
docs/02-A2A/: A2A_LEARNING_GUIDE.md
docs/03-CI_CD/: CI_CD_ARCHITECTURE.md  COMPLETE_ALIGNMENT.md  FINAL_ALIGNMENT_REPORT.md  GITHUB_RUNNERS.md  PIPELINE_SUMMARY.md  REPOS_ALIGNMENT.md  WORKFLOW_VERIFICATION.md
docs/06-SECURITY/: SECURITY_IMPROVEMENTS.md  (+1 more)
kmcp-server/: Dockerfile  README.md  pyproject.toml
kmcp-server/k8s/: kustomization.yaml  mcpserver.yaml  namespace.yaml  rbac.yaml
kmcp-server/src/gitops_mcp/: __init__.py  server.py
kmcp-server/src/gitops_mcp/tools/: __init__.py  apps.py  cluster.py  flux.py  policy.py
scripts/: e2e-a2a-test.sh  test-with-kind.sh
(+45 files in other folders)
